tests/rec/rec.exp
Error: issue-598.js:7
  7: function bar(y: F<number>): F<string> { return y; }
                                                    ^ F. This type is incompatible with the expected return type of
  7: function bar(y: F<number>): F<string> { return y; }
                                 ^^^^^^^^^ F
  Type argument `A` is incompatible:
      7: function bar(y: F<number>): F<string> { return y; }
                           ^^^^^^ number. This type is incompatible with
      7: function bar(y: F<number>): F<string> { return y; }
                                       ^^^^^^ string

Error: issue-598.js:7
  7: function bar(y: F<number>): F<string> { return y; }
                                                    ^ F. This type is incompatible with the expected return type of
  7: function bar(y: F<number>): F<string> { return y; }
                                 ^^^^^^^^^ F
  Type argument `A` is incompatible:
      7: function bar(y: F<number>): F<string> { return y; }
                                       ^^^^^^ string. This type is incompatible with
      7: function bar(y: F<number>): F<string> { return y; }
                           ^^^^^^ number

Error: test.js:6
  6: (p.x: string); // error
      ^^^ number. This type is incompatible with
  6: (p.x: string); // error
           ^^^^^^ string

Error: test.js:9
  9: (pstar: number); // error, but limit potentially unbounded number of errors!
      ^^^^^ P. This type is incompatible with
  9: (pstar: number); // error, but limit potentially unbounded number of errors!
             ^^^^^^ number

Error: test.js:13
 13: (pstar.x: string); // error
      ^^^^^^^ number. This type is incompatible with
 13: (pstar.x: string); // error
               ^^^^^^ string

Error: test.js:16
 16: (pstar.x: string); // error
      ^^^^^^^ P. This type is incompatible with
 16: (pstar.x: string); // error
               ^^^^^^ string

Error: test2.js:30
 30: ((new C: C<number>): D<string>) // error: number ~/~ string
              ^^^^^^^^^ D. Has some incompatible type argument with
 30: ((new C: C<number>): D<string>) // error: number ~/~ string
                          ^^^^^^^^^ D
  Type argument `X` is incompatible:
     30: ((new C: C<number>): D<string>) // error: number ~/~ string
                    ^^^^^^ number. This type is incompatible with
     30: ((new C: C<number>): D<string>) // error: number ~/~ string
                                ^^^^^^ string

Error: test2.js:30
 30: ((new C: C<number>): D<string>) // error: number ~/~ string
              ^^^^^^^^^ D. Has some incompatible type argument with
 30: ((new C: C<number>): D<string>) // error: number ~/~ string
                          ^^^^^^^^^ D
  Type argument `X` is incompatible:
     30: ((new C: C<number>): D<string>) // error: number ~/~ string
                                ^^^^^^ string. This type is incompatible with
     30: ((new C: C<number>): D<string>) // error: number ~/~ string
                    ^^^^^^ number

Error: test3.js:13
 13:   return x; // terminate despite expanding types, error
              ^ P. This type is incompatible with the expected return type of
 12: function bar(x: P<number>): () => P<number> {
                                 ^^^^^^^^^^^^^^^ function type
  This parameter is incompatible:
     10: type P<X> = () => Q<P<X>>;
                           ^^^^^^^ Q. This type is incompatible with
     12: function bar(x: P<number>): () => P<number> {
                                           ^^^^^^^^^ P
      Callable property is incompatible:
         12: function bar(x: P<number>): () => P<number> {
                                               ^^^^^^^^^ P. Callable signature not found in
         10: type P<X> = () => Q<P<X>>;
                               ^^^^^^^ Q


Found 9 errors
